# discord-codex-bridge

./: .env.example  .gitignore  README.md  bridges.example.json  pyproject.toml
docs/plans/: 2026-03-08-discord-codex-bridge.md  2026-03-08-discord-multi-bridge-design.md  2026-03-08-discord-multi-bridge-implementation.md  2026-03-08-w-bridge-route-design.md  2026-03-08-w-bridge-route.md  2026-03-15-psmux-windows-design.md  2026-03-15-psmux-windows-plan.md  2026-03-15-wezterm-backend-design.md  2026-03-15-wezterm-backend.md
src/discord_codex_bridge/: __init__.py  __main__.py  ai.py  backend_factory.py  config.py  controller.py  models.py  service.py  shortcuts.py  state.py  summary.py  terminal_backend.py  tmux_bridge.py  wezterm_backend.py
systemd/: discord-codex-bridge.service  discord-codex-multi-bridge.service
tests/: test_controller.py  test_runtime_helpers.py  test_service_helpers.py  test_service_runtime_commands.py  test_shortcuts.py  test_tmux_bridge.py  test_wezterm_backend.py
